<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SampleActivityKotlin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_txt1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_txt2"
                    android:textSize="14sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="10dp"/>


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="30dp">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="start"
                                    android:paddingEnd="10dp"
                                    android:paddingRight="10dp"
                                    android:text="@string/txt_lang"
                                    android:textSize="15sp" />

                                <Spinner
                                    android:id="@+id/langSpinner"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:paddingBottom="25dp"
                                android:text="@string/txt_language_change_tip"
                                android:textColor="@color/colorAccent"
                                android:textSize="13sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnProgramsDlgTest"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_btn_open_programs_dlg" />

                            <Button
                                android:id="@+id/btnExitDlgTest"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_btn_open_exit_dlg" />

                            <Button
                                android:id="@+id/mahBtnOpenJavaSample"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_btn_open_java_sample" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:text="@string/txt_links"
                            android:textSize="15sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="0dp"
                            android:background="@color/sample_text_color" />

                        <TextView
                            android:id="@+id/tvMAHAdsLibGithubUrl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:text="@string/acp_lib_github_url"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvMAHAdsLibJCenterURL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:text="@string/acp_lib_jcenter_url"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="10dp"
                            android:gravity="start"
                            android:text="@string/txt_note"
                            android:textSize="15sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="0dp"
                            android:background="@color/sample_text_color" />

                        <TextView
                            android:id="@+id/tvMAHAdsLibContrubute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:text="@string/acp_lib_contubute"
                            android:textSize="12sp" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/ivForkMeOnGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/forkme_green" />

    </RelativeLayout>


</LinearLayout>
